Fixing Style/finishing dark mode

--- a/front-end/css/gif-preview.css
+++ b/front-end/css/gif-preview.css
@@ -11,31 +11,32 @@
 }
 
 .thumbnail-row {
-  display: grid;
-  grid-template-rows: 50px 50px 50px;
-  row-gap: 0px;
-
+  opacity:0;
+  display: flex;
   font-family: 'Press Start 2P', cursive;
   font-weight: normal;
-  max-width: 15em;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
-
   position: absolute;
   width: 100%;
-  height: 98.4%;
-  top: 0.1%;
-
-  opacity: 0;
+  height: 100%;
+  top: 0;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  
 }
 
 .thumbnail-row p {
-  margin: 0;
-  padding: 0;
-  max-width: 15em;
-  margin-left: 5px;
-
+  margin-left: 0.7em;
+  overflow:hidden;
   font-size: 15px;
+}
+
+.gif-info{
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
 }
 
 .thumbnail {
@@ -67,9 +68,10 @@
 .like-btn {
   background: transparent;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.2em;
   cursor: pointer;
   border: none;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .like-btn:hover {
